# change-detection

./: Cargo.toml  README.md
.github/workflows/: rust.yml
lib/: Cargo.toml
lib/src/: lib.rs
src/: lib.rs
tests/npm-build/: Cargo.toml  build.rs
tests/npm-build/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
