[package]
name = "change-detection"
version = "1.0.0"
authors = ["Alexander Korolev <kilork@yandex.ru>"]
edition = "2018"
categories = []
description = """
A library to generate change detection instructions during build time.
"""
homepage = "https://github.com/rust-utility/change-detection"
keywords = []
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/rust-utility/change-detection"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
