[package]
name = "change-detection-tests-npm-build"
version = "0.1.0"
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
edition = "2018"
categories = ["development-tools::build-utils"]
description = """
A library to generate change detection instructions during build time.
"""
homepage = "https://github.com/rust-utility/change-detection"
keywords = []
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/rust-utility/change-detection"

[dependencies]
change-detection = { path = "../../lib" }

[build-dependencies]
change-detection = { path = "../../lib" }
